# learning-langgraph

./: pyproject.toml
notebooks/: develop.ipynb
resources/: data_catalog.json
resources/salesforce/: accounts.json  contacts.json  generate_salesforce_data.py  opportunities.json
src/app/: config.py
src/app/agents/: llm.py
src/app/tools/: data_catalog.py
